<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.justincranford.jcutils</groupId>
	<artifactId>jcutil-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>jcutil-parent</name>
	<description>A collection of various utilities sharing a Maven parent+reactor pom.xml.</description>
	<url>https://github.com/justincranford/jcutils</url>
	<packaging>pom</packaging>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.test.skip>false</maven.test.skip>
		<maven.verify.skip>true</maven.verify.skip>
		<maven.install.skip>false</maven.install.skip>
		<maven.deploy.skip>true</maven.deploy.skip>
	</properties>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.25</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<!-- mvn clean compile findbugs:findbugs -->
		<dependency>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>findbugs-maven-plugin</artifactId>
			<version>3.0.5</version>
			<scope>test</scope>
		</dependency>
		<!-- mvn clean package -->
		<!-- Standardize all child modules on ProGuard 5.3.3 -->
		<dependency>
			<groupId>com.github.wvengen</groupId>
			<artifactId>proguard-maven-plugin</artifactId>
			<version>2.0.14</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.proguard</groupId>
			<artifactId>proguard-base</artifactId>
			<version>5.3.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- mvn clean compile org.owasp:dependency-check-maven:check -->
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--
			<plugin>
				<groupId>com.github.wvengen</groupId>
				<artifactId>proguard-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>proguard</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<injarNotExistsSkip>true</injarNotExistsSkip>
					<proguardVersion>5.3.3</proguardVersion>
					<obfuscate>true</obfuscate>
					<injar>${project.build.finalName}.jar</injar>
					<outjar>${project.build.finalName}-obfuscated.jar</outjar>
					<outputDirectory>${project.build.directory}</outputDirectory>
					<proguardInclude>../proguard.conf</proguardInclude>
					<libs>
						<lib>${java.home}/lib/rt.jar</lib>
						<lib>${java.home}/lib/jce.jar</lib>
						<lib>${java.home}/lib/jsse.jar</lib>
					</libs>
				</configuration>
			</plugin>
			-->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.5</version>
				<configuration>
					<effort>Max</effort>
					<threshold>Low</threshold>
					<failOnError>true</failOnError>
					<plugins>
						<plugin>
							<groupId>com.h3xstream.findsecbugs</groupId>
							<artifactId>findsecbugs-plugin</artifactId>
							<version>LATEST</version> <!-- Auto-update to the latest stable -->
						</plugin>
					</plugins>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<developers>
		<developer>
			<name>Justin Cranford</name>
			<email>justincranford@hotmail.com</email>
			<organization>Justin Cranford</organization>
			<organizationUrl>https://github.com/justincranford</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:https://github.com/justincranford/jcutils.git</connection>
		<developerConnection>scm:https://github.com/justincranford/jcutils.git</developerConnection>
		<url>scm:https://github.com/justincranford/jcutils</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<modules>
		<module>jcutil-timer</module>
		<module>jcutil-validation</module>
		<module>jcutil-systemproperty</module>
		<module>jcutil-multithread</module>
		<module>jcutil-string</module>
		<module>jcutil-file</module>
		<module>jcutil-provider</module>
		<module>jcutil-crypto</module>
		<module>jcutil-unpack</module>
		<module>jcutil-jul</module>
		<module>jcutil-embeddedh2</module>
		<module>jcutil-embeddedjetty</module>
		<module>jcutil-xml</module>
		<module>jcutil-httpservlet</module>
		<module>jcutil-bitmask</module>
		<module>jcutil-hkdf</module>
		<module>jcutil-pbkdf2</module>
		<module>jcutil-proxy</module>
		<module>jcutil-certdemo</module>
		<module>jcutil-junit</module>
	</modules>
</project>